--- a/Funny.Accents.Core.Types.Enumeration/Funny.Accents.Core.Types.Enumeration.csproj
+++ b/Funny.Accents.Core.Types.Enumeration/Funny.Accents.Core.Types.Enumeration.csproj
@@ -5,8 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dapper" Version="2.0.35" />
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
 </Project>
