--- a/Funny.Accents.Core.Types.Provider/Funny.Accents.Core.Types.Provider.csproj
+++ b/Funny.Accents.Core.Types.Provider/Funny.Accents.Core.Types.Provider.csproj
@@ -5,8 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Dapper" Version="2.0.35" />
-    <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
   </ItemGroup>
 
 </Project>
